--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Custom
 .cursorrules
 
+# Data files (download via scripts/download_dataset.py)
+data/raw/
+data/processed/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
