--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "kagglehub>=0.4.1",
     "pyarrow>=14.0.0",
     "tqdm>=4.66.0",
+    "scipy>=1.11.0",
+    "joblib>=1.3.0",
 ]
 
 [project.optional-dependencies]
@@ -26,6 +28,7 @@ dev = [
     "pytest-cov>=4.0.0",
     "mypy>=1.0.0",
     "ruff>=0.1.0",
+    "fastmcp>=0.1.0",
 ]
 ci = [
     "pytest>=7.0.0",
