--- a/configs/dp/solver.yaml
+++ b/configs/dp/solver.yaml
@@ -1,4 +1,9 @@
-# DP solver configuration (v2 scaffold)
+# DP solver configuration
 gamma: 0.99
 epsilon: 1.0e-8
 max_iters: 10000
+bellman_atol: 1.0e-6
+# Data-driven Phase 2 defaults (constrained sweep, low-risk choice):
+# memory=(0.0, 0.9, 2.0), recency=(2.0, 12.0)
+memory_grid: [0.0, 0.9, 2.0]
+recency_grid: [2.0, 12.0]
