--- a/configs/data/calibration.yaml
+++ b/configs/data/calibration.yaml
@@ -1,9 +1,17 @@
-# Data calibration configuration (v2 scaffold)
+# Data calibration configuration (v3 — weekly resolution, mixed categories)
 raw_dir: data/raw
 processed_dir: data/processed
 params_output: data/processed/mdp_params.yaml
 n_categories: 3
 category_column: commodity_desc
+selected_categories:
+  - FLUID MILK PRODUCTS
+  - ICE CREAM/MILK/SHERBTS
+  - FROZEN PIZZA
 delta: 0.30
 gamma: 0.99
-inactivity_horizon: 28
+deal_signal_mode: price_delta_dollars
+time_resolution: weekly
+inactivity_horizon: 4
+# Impose minimum memory penalty. Set to null to use fitted value (sensitivity knob).
+beta_m_floor: 0.10
