--- a/configs/dp/solver.yaml
+++ b/configs/dp/solver.yaml
@@ -3,7 +3,7 @@ gamma: 0.99
 epsilon: 1.0e-8
 max_iters: 10000
 bellman_atol: 1.0e-6
-# Data-driven Phase 2 defaults (constrained sweep, low-risk choice):
-# memory=(0.0, 0.9, 2.0), recency=(2.0, 12.0)
+# Weekly-resolution grid (v3):
+# memory=(0.0, 0.9, 2.0), recency=(1.0, 4.0) in weeks
 memory_grid: [0.0, 0.9, 2.0]
-recency_grid: [2.0, 12.0]
+recency_grid: [1.0, 4.0]
